--- a/README.adoc
+++ b/README.adoc
@@ -23,7 +23,7 @@ Also, we will start with extensive testing with real users at some point soon in
     ** +pytz+ 2019.1 or higher
     ** +sqlparse+ 0.3.0 or higher
 
-NOTE: The versions of the packages listed here are just a reference of which versions I have tested and that definetely work. 
+TIP: The versions of the packages listed here are just a reference of which versions I have tested and that definetely work. 
 The project might also work with older versions of these packages perfectly fine.
 However, I always recommend using the latest version of every component as a best-practice.
 
