--- a/README.adoc
+++ b/README.adoc
@@ -32,6 +32,7 @@ Also, we will start with extensive testing with real users at some point soon in
 * Python packages:
     ** `django` 3.0.7 or higher
     ** `django-tables2` 2.3.1 or higher
+* Yarn for installing necessary node modules
 
 NOTE: The versions of the packages listed here are just a reference of which versions I have tested and that definetely work. 
 The project might also work with older versions of these packages perfectly fine.
